# pokemon-gen-runner

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
game_states/: base.state
scripts/: demo_best.py  evaluate.py  experiment.py  training.py
setup/: requirements.txt
src/: gen_1_env.py  pyboy_actions.py
src/pokemon_gen_runner/: __init__.py  action.py  gen_1_env.py  observation_manager.py  pokemon_pyboy_wrapper.py
src/pokemon_gen_runner.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pokemon_gen_runner/environments/: __init__.py  gen_1_env.py
src/pokemon_gen_runner/observation_managers/: __init__.py  observation_manager.py  single_screen.py  stacked_screen.py
src/pokemon_gen_runner/reward_trackers/: __init__.py  battle_reward_tracker.py  explorer.py  gen1_reward_tracker.py  touch_grass.py  touch_grass_reward_tracker.py
