[project]
name = "pokemon_gen_runner"
version = "0.0.1"
authors = [
  { name="Patrick McQuay", email="patrick.mcquay@gmail.com" },
]
description = "Reinforcement learning for Pokemon Red/Blue"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/SnarkAttack/pokemon-gen-runner"
"Bug Tracker" = "https://github.com/SnarkAttack/pokemon-gen-runner/issues"